examples/v0.6/errors/loop_variable_outside_scope.nova
for i in 0..5 {

    print(i)

}

print(i)

// Expected: Variable 'i' is not declared.